--- a/NYTimes_API/NYTimes.html
+++ b/NYTimes_API/NYTimes.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
 
   <!-- Font Awesome CSS Icons (For cool glyphicons) -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" /> -->
 
   <!-- Style to fix the issue of text extending past card length -->
   <style>
@@ -49,7 +49,7 @@
           <div class="card-body">
 
             <!-- Here we create an HTML Form for handling the inputs-->
-            <!-- <form role="form"> -->
+            <form role="form">
 
               <!-- Here we create the text box for capturing the search term-->
               <div class="form-group">
@@ -86,7 +86,7 @@
               <button class="btn btn-default" id="clear-all">
                 <i class="fa fa-trash"></i> Clear Results</button>
 
-            <!-- </form> -->
+            </form>
           </div>
         </div>
       </div>
