Working but incomplete

--- a/NYTimes_API/NYTimes.html
+++ b/NYTimes_API/NYTimes.html
@@ -54,30 +54,30 @@
               <!-- Here we create the text box for capturing the search term-->
               <div class="form-group">
                 <label for="search">Search Term:</label>
-                <input type="text" class="form-control" id="search-term" value="test">
+                <input type="text" class="form-control" id="search-term">
               </div>
 
               <!-- Here we capture the number of records that the user wants to retrieve  -->
               <div class="form-group">
                 <label for="pwd">Number of Records to Retrieve:</label>
                 <select id="article-count" class="custom-select" aria-labelledby="dropdownMenuButton">
-                  <option value="1">1</option>
+                  <option value="1" selected>1</option>
                   <!-- Setting the option for 5 as default -->
                   <option value="5">5</option>
-                  <option value="10" selected>10</option>
+                  <option value="10">10</option>
                 </select>
               </div>
 
               <!-- Here we capture the Start Year Parameter-->
               <div class="form-group">
                 <label for="start-year">Start Year (Optional):</label>
-                <input type="text" class="form-control" id="start-year" value="2010">
+                <input type="text" class="form-control" id="start-year">
               </div>
 
               <!-- Here we capture the End Year Parameter -->
               <div class="form-group">
                 <label for="end-year">End Year (Optional):</label>
-                <input type="text" class="form-control" id="end-year" value="2019">
+                <input type="text" class="form-control" id="end-year">
               </div>
 
               <!-- Here we have our final submit button -->
