--- a/NYTimes_API/NYTimes.html
+++ b/NYTimes_API/NYTimes.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
 
   <!-- Font Awesome CSS Icons (For cool glyphicons) -->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" /> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 
   <!-- Style to fix the issue of text extending past card length -->
   <style>
@@ -61,9 +61,10 @@
               <div class="form-group">
                 <label for="pwd">Number of Records to Retrieve:</label>
                 <select id="article-count" class="custom-select" aria-labelledby="dropdownMenuButton">
-                  <option value="1" selected>1</option>
+                  <option value="1">1</option>
                   <!-- Setting the option for 5 as default -->
-                  <option value="5">5</option>
+                  <option value="2">2</option>
+                  <option value="5" selected>5</option>
                   <option value="10">10</option>
                 </select>
               </div>
@@ -119,11 +120,7 @@
 
         <!-- Line Break followed by closing -->
         <hr>
-        <h5 class="text-center">
-          <small>Made with lots and lots of
-            <i class="fa fa-heart"></i>
-          </small>
-        </h5>
+
 
       </div>
     </div>
