--- a/TranSched.html
+++ b/TranSched.html
@@ -14,6 +14,13 @@
             <p>Choo Choo. Chee Chee.</p>
         </div>
 
+        <ul class="list-group b-1">
+                <li class="list-group-item active">Current Train Schedule</li>
+                <li class="list-group-item">Train 1</li>
+                <li class="list-group-item">Train 2</li>
+                <li class="list-group-item">Train 3</li>
+                <li class="list-group-item">Train 4</li>
+        </ul>
     </div>    
     <script>
     
