--- a/TranSched.html
+++ b/TranSched.html
@@ -14,13 +14,42 @@
             <p>Choo Choo. Chee Chee.</p>
         </div>
 
-        <ul class="list-group b-1">
-                <li class="list-group-item active">Current Train Schedule</li>
-                <li class="list-group-item">Train 1</li>
-                <li class="list-group-item">Train 2</li>
-                <li class="list-group-item">Train 3</li>
-                <li class="list-group-item">Train 4</li>
-        </ul>
+ 
+        <table class="table">
+                <thead class="badge-primary">
+                  <tr>
+                    <th scope="col">Train Name</th>
+                    <th scope="col">Destination</th>
+                    <th scope="col">Frequency (min)</th>
+                    <th scope="col">Next arrival</th>
+                    <th scope="col">Minutes Away</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                    <td>@mdo</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                    <td>@mdo</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td>Larry</td>
+                    <td>the Bird</td>
+                    <td>@twitter</td>
+                    <td>@mdo</td>
+                  </tr>
+                </tbody>
+              </table>
+            
     </div>    
     <script>
     
